--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header>
-  <h2 class="text-6xl">Hunting Phone</h2>
+    <header class="mt-5">
+  <h2 class="text-6xl"><marquee class="text-amber-800 font-bold">Shohag Phone Hunting...</marquee></h2>
     </header>
-    <main class="container mx-auto mt-8">
+    <main class="container mx-auto mt-10">
         <section class="bg-gray-100 p-4 m-4">
-            <input type="text" placeholder="Search..." class="input input-bordered w-full max-w-xs" />
-            <button class="btn btn-accent">Search</button>
+            <input id="search-field" type="text" placeholder="Search..." class="input input-bordered w-full max-w-xs" />
+            <button onclick="handleSearch()" class="btn btn-accent">Search</button>
         </section>
         
         <!--search result-->
