--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="mt-5">
-  <h2 class="text-6xl"><marquee class="text-amber-800 font-bold">Shohag Phone Hunting...</marquee></h2>
+  <h2 class="text-6xl"><marquee class="text-amber-800 font-bold">Aminur Phone Hunting...</marquee></h2>
     </header>
     <main class="container mx-auto mt-10">
         <section class="bg-gray-100 p-4 m-4">
