--- a/index.html
+++ b/index.html
@@ -15,13 +15,26 @@
         <section class="bg-gray-100 p-4 m-4">
             <input id="search-field" type="text" placeholder="Search..." class="input input-bordered w-full max-w-xs" />
             <button onclick="handleSearch()" class="btn btn-accent">Search</button>
+
+            <!--another search field-->
+            <input type="text" id="search-field2" placeholder="Search Here..." class="input input-bordered w-full max-w-xs" />
+            <button onclick="handleSearch2()" class="btn btn-primary">Search</button>
         </section>
+        <!--Spinner or loader-->
+
         
         <!--search result-->
 <section>
+    <div id="loading-spinner" class="text-center my-40 hidden">
+        <span class="loading loading-spinner loading-lg text-primary"></span>
+    </div>
     <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         
 
+    </div>
+    <!--Show all Button-->
+    <div id="show-all-container" class="hidden">
+        <button class="btn btn-accent">Show All</button>
     </div>
 </section>
     </main>
