--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="mt-5">
-  <h2 class="text-6xl"><marquee class="text-amber-800 font-bold">Aminur Phone Hunting...</marquee></h2>
+  <h2 class="text-6xl"><marquee class="text-amber-800 font-bold">Abir Phone Hunting...</marquee></h2>
     </header>
     <main class="container mx-auto mt-10">
         <section class="bg-gray-100 p-4 m-4">
@@ -17,14 +17,15 @@
             <button onclick="handleSearch()" class="btn btn-accent">Search</button>
 
             <!--another search field-->
-            <input type="text" id="search-field2" placeholder="Search Here..." class="input input-bordered w-full max-w-xs" />
-            <button onclick="handleSearch2()" class="btn btn-primary">Search</button>
+            <!-- <input type="text" id="search-field2" placeholder="Search Here..." class="input input-bordered w-full max-w-xs" />
+            <button onclick="handleSearch2()" class="btn btn-primary">Search</button> -->
         </section>
-        <!--Spinner or loader-->
+        
 
         
         <!--search result-->
 <section>
+    <!--Spinner or loader-->
     <div id="loading-spinner" class="text-center my-40 hidden">
         <span class="loading loading-spinner loading-lg text-primary"></span>
     </div>
@@ -33,8 +34,8 @@
 
     </div>
     <!--Show all Button-->
-    <div id="show-all-container" class="hidden">
-        <button class="btn btn-accent">Show All</button>
+    <div id="show-all-container" class="hidden text-center my-8">
+        <button onclick="handleShowAll()" class="btn btn-accent">Show All</button>
     </div>
 </section>
     </main>
